# Heuristic_path_planners

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  package.xml  setup.py
.github/workflows/: build_melodic.yml  build_noetic.yml  codeql-analysis.yml
config/: costmap_for_rand_maps.yaml  example_costmap_params.yaml
docs/: 1.Status.md
include/Grid3D/: VoronoiGrid.hpp  grid3d.hpp  grid3d_Santi.hpp  gridMap.hpp  local_grid3d.hpp
include/Planners/: AStar.hpp  AStarGenerator.hpp  AStarGeneratorSafetyCost.hpp  AStarM1.hpp  AStarM2.hpp  AStarSIREN.hpp  AStarSemantic.hpp  AStarSemanticCost.hpp  AStar_EDF.hpp  AStar_EDF_Backup.hpp  AStar_Gradient.hpp  AlgorithmBase.hpp  CostAwareAStarGenerator.hpp  CostAwareLazyThetaStarGenerator.hpp  CostAwareLazyThetaStarGeneratorModified.hpp  CostAwareThetaStarGenerator.hpp  LazyThetaStar.hpp  LazyThetaStarGenerator.hpp  LazyThetaStarGeneratorSafetyCost.hpp  LazyThetaStarM1.hpp  LazyThetaStarM1Mod.hpp  LazyThetaStarM2.hpp  LazyThetaStarSIREN.hpp  LazyThetaStarSemantic.hpp  LazyThetaStarSemanticCost.hpp  LazyThetaStar_EDF.hpp  LazyThetaStar_Gradient.hpp  LocalPlanner.hpp  PathGenerator.hpp  ThetaStar.hpp  ThetaStarGenerator.hpp  ThetaStarGeneratorSafetyCost.hpp  ThetaStarM1.hpp  ThetaStarM2.hpp  ThetaStarSIREN.hpp  ThetaStarSemantic.hpp  ThetaStarSemanticCost.hpp  ThetaStar_Gradient.hpp
include/ROS/: global_planner.hpp
include/local_planner_optimizer/: ceres_constraint_0_dist_to_obstacle.hpp  ceres_constraint_0_path_length.hpp  ceres_constraint_0_smoothness.hpp  ceres_constraint_0_wp_equidistance.hpp  ceres_constraint_1_dist_to_obstacle.hpp  ceres_constraint_1_min_acceleration.hpp  ceres_constraint_1_path_length.hpp  ceres_constraint_1_pos_vel_coherence.hpp  ceres_constraint_1_smoothness.hpp  ceres_constraint_1_velocity_change.hpp  ceres_constraint_1_wp_equidistance.hpp  ceres_constraint_2_cont_dist_to_obstacle_segment.hpp  ceres_constraint_2_cont_fix_goal.hpp  ceres_constraint_2_cont_path_length_segment.hpp  ceres_constraint_2_cont_smoothness.hpp  ceres_constraint_3_cont_dist_to_obstacle_segment_pc.hpp  ceres_constraint_3_cont_fix_goal.hpp  ceres_constraint_3_cont_path_length_segment.hpp  ceres_constraint_4_cont_dist_to_obstacle_segment.hpp  ceres_constraint_4_cont_obst_avoidance.hpp  ceres_constraint_4_cont_path_length_segment.hpp  ceres_constraint_4_cont_smoothness.hpp  ceres_constraint_cont_dist_to_obstacle.hpp  ceres_constraint_cont_dist_to_obstacle_segment.hpp  ceres_constraint_cont_fix_goal.hpp  ceres_constraint_cont_init_distance_to_wp.hpp  ceres_constraint_cont_init_distance_to_wp_g5.hpp  ceres_constraint_cont_init_smoothness.hpp  ceres_constraint_cont_init_smoothness_g5.hpp  ceres_constraint_cont_path_length.hpp  ceres_constraint_cont_path_length_segment.hpp  ceres_constraint_cont_smoothness.hpp  ceres_constraint_dist_to_obstacle.hpp  ceres_constraint_min_acceleration.hpp  ceres_constraint_path_length.hpp  ceres_constraint_pos_vel_coherence.hpp  ceres_constraint_smoothness.hpp  ceres_constraint_velocity_change.hpp  ceres_constraint_wp_equidistance.hpp
include/utils/: CeresOpt.hpp  FCNet.hpp  LineOfSight.hpp  SaveDataAnyToFile.hpp  SaveDataToFile.hpp  SaveDataVariantToFile.hpp  ceres_utils.hpp  geometry_utils.hpp  heuristic.hpp  metrics.hpp  misc.hpp  time.hpp  utils.hpp  world.hpp
launch/: astar.launch  frames.launch  grid3d.launch  local_planner.launch  plan_random_path.launch  planner.launch  planner2d_example.launch  planner2d_voronoi.launch  planner_bim.launch  planner_launch.py  planner_launch_miguel.py  planner_rviz_launch.py  rviz_launch.py  simulator_atlas.launch  simulator_mbzirc.launch
launch/utils/: create_octomap.launch
msg/: CoordinateList.msg  Esdfbuffer.msg
resources/2dmaps/: big_lab.pgm  big_lab.yaml  big_lab_map_v2.pgm  big_lab_map_v2.yaml  robbi_1.pgm  robbi_1.yaml  robbi_2.pgm  robbi_2.yaml  test.pgm  test.yaml  tunnel.pgm  tunnel.yaml  two_points.pgm  two_points.yaml
resources/3dmaps/: Atlas_8_floor_1kk_res_02.bt  Atlas_8_puertas_02.bt  Atlas_mod_ICUAS25.bt  abu_dhabi_002.bt  abu_dhabi_002_blender.bt  casoplonv2_5mill.bt  laberynth.bt  manufacturing.bt  maze.bt  tower.bt  two_blocks.bt  wall.bt
resources/maps/: octomap_full.bt
ros_plugins/: global_planner_plugin.xml
rviz/: astar.rviz  default.rviz  local_planner.rviz  planners.rviz  planners_2d.rviz
scripts/: bim2ros.py  compare_trajectories_rviz.py  generate2d_random_map.py  generate3d_random_map.py  grid3d_class.py  plan_caller.py  put_semantic_info_in_pcl.py  sdf_model.py  simple_repub_marker.py  test_algorithms.py  test_algorithms_compare.py  test_algorithms_performance.py  test_algorithms_pseudo_random_paths.py  test_cost_aware_astar.py
src/Grid3D/: gridMap.cpp
src/Planners/: AStar.cpp  AStarGenerator.cpp  AStarGeneratorSafetyCost.cpp  AStarM1.cpp  AStarM2.cpp  AStarSIREN.cpp  AStarSemantic.cpp  AStarSemanticCost.cpp  AStar_EDF.cpp  AStar_EDF_9_17.cpp  AStar_EDF_Backup.cpp  AStar_EDF_grad.cpp  AStar_Gradient.cpp  AlgorithmBase.cpp  CostAwareAStarGenerator.cpp  CostAwareLazyThetaStarGenerator.cpp  CostAwareLazyThetaStarGeneratorModified.cpp  CostAwareThetaStarGenerator.cpp  LazyThetaStar.cpp  LazyThetaStarGenerator.cpp  LazyThetaStarGeneratorSafetyCost.cpp  LazyThetaStarM1.cpp  LazyThetaStarM1Mod.cpp  LazyThetaStarM1_Backup.cpp  LazyThetaStarM1_IROS.cpp  LazyThetaStarM2.cpp  LazyThetaStarSIREN.cpp  LazyThetaStarSemantic.cpp  LazyThetaStarSemanticCost.cpp  LazyThetaStar_EDF.cpp  LazyThetaStar_EDF_1.cpp  LazyThetaStar_EDF_backup.cpp  LazyThetaStar_Gradient.cpp  LocalPlanner.cpp  PathGenerator.cpp  ThetaStar (copy).cpp  ThetaStar.cpp  ThetaStar11.cpp  ThetaStarGenerator.cpp  ThetaStarGeneratorSafetyCost.cpp  (+9 more)
src/ROS/: astar_ros_node.cpp  global_planner.cpp  local_planner_node.cpp  local_planner_ros_node.cpp  planner_ros_node.cpp
src/utils/: CeresOpt.cpp  FCNet.cpp  LineOfSight.cpp  geometry_utils.cpp  heuristic.cpp  metrics.cpp  utils.cpp
srv/: CellCostValue.srv  GetPath.srv  GetSemanticGrid.srv  SetAlgorithm.srv  ShareWeights.srv
tests/: bresenham.cpp  clock.cpp  geometry_utils.cpp  main_test.cpp  tests.cpp
(+35 files in other folders)
