<?xml version="1.0"?>
<package format="2">
  <name>heuristic_planners</name>
  <version>0.3.0</version>
  <description>The heuristic planners package </description>

  <maintainer email="rreyarc@upo.es">RafaelRey</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>octomap_server</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>doxygen</build_depend>
  <build_depend>libssl-dev</build_depend>
  <build_depend>boost</build_depend>
  
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>octomap_ros</build_export_depend>
  <build_export_depend>octomap_server</build_export_depend>
  <build_export_depend>costmap_2d</build_export_depend>
  <build_export_depend>doxygen</build_export_depend>
  <build_export_depend>libssl-dev</build_export_depend>
  <build_export_depend>boost</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>octomap_ros</exec_depend>
  <exec_depend>octomap_server</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>doxygen</exec_depend>
  <exec_depend>libssl-dev</exec_depend>
  <exec_depend>boost</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
