<?xml version="1.0"?>
<package format="3">
  <name>heuristic_planners</name>
  <version>0.4.3</version>
  <description>The heuristic planners package </description>

  <maintainer email="reyarcenegui@gmail.com">RafaelRey</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>roscpp</depend>
  <depend>octomap_ros</depend>
  <depend>octomap_server</depend>
  <depend>costmap_2d</depend>
  <depend>message_generation</depend>
  <depend>doxygen</depend>
  <depend>libssl-dev</depend>
  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>trajectory_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>


  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
